--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "whatsapp-ai-bot",
   "version": "1.0.0",
-  "description": "WhatsApp AI bot with web interface",
+  "description": "WhatsApp AI bot using WhatsApp Cloud API",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -9,11 +9,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "socket.io": "^4.7.2",
-    "whatsapp-web.js": "^1.23.0",
-    "qrcode": "^1.5.3",
-    "node-fetch": "^2.7.0",
-    "puppeteer": "^21.5.0"
+    "node-fetch": "^2.7.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
