--- a/vercel.json
+++ b/vercel.json
@@ -12,16 +12,17 @@
   ],
   "routes": [
     {
-      "src": "/socket.io/(.*)",
+      "src": "/webhook",
       "dest": "server.js"
     },
     {
       "src": "/(.*)",
       "dest": "/public/$1"
-    },
-    {
-      "src": "/",
-      "dest": "/public/index.html"
     }
-  ]
+  ],
+  "env": {
+    "WHATSAPP_TOKEN": "",
+    "WHATSAPP_PHONE_ID": "",
+    "VERIFY_TOKEN": ""
+  }
 }
