--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "whatsapp-ai-bot",
   "version": "1.0.0",
-  "description": "WhatsApp AI bot using WhatsApp Cloud API",
+  "description": "WhatsApp AI bot with QR code login",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "postinstall": "npx playwright install chromium"
   },
   "dependencies": {
     "express": "^4.18.2",
+    "socket.io": "^4.7.2",
+    "playwright": "^1.41.2",
+    "qrcode": "^1.5.3",
     "node-fetch": "^2.7.0"
   },
   "devDependencies": {
