--- a/package.json
+++ b/package.json
@@ -6,19 +6,25 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "postinstall": "npx playwright install chromium"
+    "build": "npm install && npx playwright install chromium --with-deps",
+    "postinstall": "npx playwright install chromium --with-deps"
   },
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.7.2",
     "playwright": "^1.41.2",
-    "qrcode": "^1.5.3",
-    "node-fetch": "^2.7.0"
+    "node-fetch": "^2.7.0",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
   "engines": {
     "node": ">=16"
+  },
+  "browser": {
+    "fs": false,
+    "os": false,
+    "path": false
   }
 }
